--- a/Read/ReadMeWiki/08.思考系列/01.Jetpack设计思想反思.md
+++ b/Read/ReadMeWiki/08.思考系列/01.Jetpack设计思想反思.md
@@ -111,6 +111,8 @@
 ### 04.Lifecycle设计思想
 #### 4.1 Lifecycle基础介绍
 
+
+
 #### 4.2 Lifecycle如何设计
 
 
@@ -146,15 +148,17 @@
 #### 5.2 LiveData如何设计
 - 如何设计这种观察者模式？
     - 设计者首先要定义一个接口Observer，接口中通知数据刷新onChanged方法。然后将注册监听的事件添加到Map集合中。最后发送数据后，取集合数据遍历通知刷新。
-- 如何设计发送数据？
+- 如何设计发送数据操作？
     - 考虑到子线程不能更新Ui，固设计postValue方法。发送数据后，然后进行事件分发，遍历mObservers集合中监听者，然后调用观察者接口中onChanged方法刷新。
 - 如何设计避免内存泄漏？
     - 当它被我们的Activity订阅观察，这之后Activity如果finish()掉，LiveData本身会自动“清理”以避免内存泄漏。主要是依靠Lifecycle。
-- 如何设计LiveData资源共享？
-    - 1
+- 如何设计LiveData粘性事件？
+    - 在发送消息之后去注册监听，怎么做才能收到之前消息？如果是我设计，我会把之前消息都存储起来，当注册消息监听的时候，会去消息Map中查询与当前绑定的观察者，然后刷新数据操作。
 - 如何设计生命周期活跃状态才通知数据变化刷新？
     - 第一点：在发送数据后遍历监听者刷新时，会判断observer是否是活跃的状态(是否是非CREATE状态)。如果是非活跃状态则过滤，通过shouldBeActive过滤！
     - 针对 observerForever() 不会受到 Activity 等组件的生命周期的影响，只要数据更新就会收到通知。具体看AlwaysActiveObserver类，设置shouldBeActive一直是true状态。
+- 事件发射的核心设计思想
+    - 对于观察者来说，它并不关心观察对象 数据是如何过来的，而只关心数据过来后 进行怎样的处理。事件发射的上游 和 接收事件的下游 互不干涉，大幅降低了互相持有的依赖关系所带来的强耦合性。
 
 
 
@@ -177,6 +181,9 @@
     - new LifecycleBoundObserver(owner, observer)，将数据观测者(Observer)包装注册到生命周期的观测者中
     - mObservers.putIfAbsent(observer, wrapper)，将观测者包装类和观察者存放到Map集合里
     - owner.getLifecycle().addObserver(wrapper)，获取owner(一般拿到的是activity或者fragment)的Lifecycle对象
+> LifecycleRegistry#addObserver()，添加注册被观察者对象
+    - statefulObserver.dispatchEvent，看这个核心代码是做事件分发的操作。
+    - LifecycleRegistry.ObserverWithState#dispatchEvent，在这个里面调用了mLifecycleObserver.onStateChanged(owner, event)，最后就会调用到LifecycleBoundObserver的onStateChanged方法
 > LifecycleBoundObserver#()，来看一下将观察者放到包装类中做了什么
     - LifecycleBoundObserver对象, 它继承于ObserverWrapper, 并最终实现了GenericLifecycleObserver接口；
     - LifecycleBoundObserver#onStateChanged()，在发生状态转换事件时，会调用onStateChanged方法，如果是DESTROYED状态，则先要移除观察者，然后在取到生命周期状态变更事件
@@ -184,7 +191,19 @@
 > ObserverWrapper#activeStateChanged()，这个方法主要是做事件分发
     - LiveData#dispatchingValue(this)，这个方法是调用considerNotify去刷新状态。传入了this ，也就是 LifecycleBoundObserver ，这时候不为 null 。也就是说生命周期改变触发的流程就是这种情况，这种情况下，只会通知跟该 Owner 绑定的 Observer。
 - 那么注册观察者之后的触发流程是怎样的？
-    - observe ——> onStateChanged ——> activeStateChanged ——> dispatchingValue ——> considerNotify ——> onChanged
+    - observe ——> onStateChanged ——> activeStateChanged ——> dispatchingValue ——> considerNotify【注意：只会通知跟该 Owner 绑定的 Observer】 ——> onChanged
+
+
+
+#### 5.4 遇到的问题分析
+- 既然LiveData已经能够实现在onDestroy()的生命周期时自动解除订阅，为什么还要多此一举设置一个Active的状态呢？
+    - Activity并非只有onDestroy()一种状态的，更多时候，新的Activity运行在栈顶，旧的Activity就会运行在 background——这时旧的Activity会执行对应的onPause()和onStop()方法。
+    - 我们当然不会关心运行在后台的Activity所观察的LiveData对象（即使数据更新了，我们也无从进行对应UI的更新操作），因此LiveData进入 **InActive(待定、非活跃)**状态，return并且不去执行对应的回调方法，是 非常缜密的优秀设计 。
+- Activity在后台依然能够响应数据的变更，可不可以呢？
+    - 提供了observerForever()方法，在这种情况下，它能够响应到任何生命周期中数据的变更事件。
+    - 比如对于observe()方法和observerForever()方法对应生成的包装类，后者方法生成的是AlwaysActiveObserver对象，统一抽象为ObserverWrapper。将公共业务进行向上抽离为抽象类的严谨，也非常值得我们学习。
+
+
 
 
 
