--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -41,6 +41,7 @@
 - 07.项目优化点说明
 
 
+
 ### 01.整体概述
 #### 1.1 项目背景说明
 
@@ -50,6 +51,10 @@
 
 
 #### 1.3 基础概念介绍
+- 蓝牙开发基础知识
+    - 为了让蓝牙设备可以在彼此之间传输数据，必须先通过配对过程形成通道。其中一台设备需要将自身设置为可接收传入的连接请求，另一台设备则通过服务发现过程并找到可检测的设备。
+    - 随后在检测到的设备接受配对请求后，设备之间完成绑定操作，并在此期间交换安全密钥。二者会缓存这些密钥，以供日后使用。
+    - 完成配对和绑定过程后，两台设备会交换信息。当会话完成时，发起配对请求的设备会将其链接到可检测设备的通道。
 - 蓝牙现在还分经典蓝牙、低功耗蓝牙和双模蓝牙。
 
 
@@ -163,6 +168,8 @@
 - 如何获取扫描的蓝牙设备
     - 如果是使用bluetoothAdapter.startLeScan扫描设备，通过LeScanCallback.onLeScan回调扫描发现的蓝牙。发现一个蓝牙设备则会回调一次。
     - 如果是使用bluetoothLeScanner.startScan扫描设备，通过ScanCallback.onScanResult和ScanCallback.onBatchScanResults获取发现的蓝牙设备。
+- 如何停止蓝牙扫描设备
+    - 调用bluetoothAdapter.stopLeScan停止扫描。
 - 如果过滤一些设备呢
     - 作为线上蓝牙库，当然希望只是扫描特定智能设备的一些蓝牙，该怎么处理？可以添加过滤隐私，这个就是蓝牙设备的uuid。
     - 如果是bluetoothAdapter.startLeScan扫描设备，则是startLeScan(serviceUuids, callback)，传递uuid数组即可。
@@ -187,13 +194,14 @@
 #### 3.6 配对后连接蓝牙
 - 如何判断蓝牙是否连接
     - 第一种方法：通过BluetoothAdapter.getProfileConnectionState(), 这个方法需要传入一个设备类型，不同设备类型可能不同。
-    - 第二种方法：BluetoothAdapter类中有一个函数getConnectionState()，但是这个函数不提供给App使用，只能通过反射的方式调用。
+    - 第二种方法：BluetoothAdapter类中有一个函数getConnectionState()，然后拿到状态是否是：STATE_CONNECTED，如果是则表示已经连接。
 - 如何设置连接蓝牙
-    - 
+    - 调用bluetoothDevice.connectGatt方法即可表示连接蓝牙。
 - 如何取消蓝牙连接
-    - 
+    - 调用bluetoothGatt.disconnect()方法即可取消蓝牙连接。
 - 如何获取已经连接的蓝牙设备
-    - 
+    - 待定
+
 
 
 #### 3.7 蓝牙数据传递
