--- a/Read/ReadMeWiki/09.问题面试/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/01.Java相关问题汇总.md
@@ -29,6 +29,13 @@
 - 泛型通配符，上界或者下届包含自己吗？如何理解泛型擦除这个概念？泛型擦除会有哪些影响？
 - 那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？
 - 如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<？>和List<Object>之间的区别是什么？
+- 【整型和字面值】整型数据和字面值有何区别？为何要有字面值？说下装箱和拆箱操作，int和integer分别存储在哪里，valueOf用到什么设计模式，怎么理解缓存池的概念
+- 【String类】请说下String与StringBuffer区别，StringBuffer底部如何实现？String类可以被继承吗，为什么？String为什么要设计成不可变的？
+- 【基本数据】一个int变量，用volatile修饰，多线程去操作++，线程安全吗？那如何才能保证i++线程安全？不用锁如何保证int自增安全？
+- 【泛型】那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？泛型和反射有什么联系？
+- 【泛型】如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<?>和List<Object>之间的区别是什么?
+- 【泛型与反射】通过反射获得泛型的实际类型参数？父类子类使用泛型，其中使用泛型需要注意什么问题？
+- 【二进制】浮点型在二进制中如何表示，为何会出现精度丢失，从存储角度分析一下
 
 
 
@@ -48,7 +55,12 @@
 - 抽象的（abstract）方法是否可同时是静态的（static）,是否可同时是本地方法（native），是否可同时被synchronized修饰？
 - 当一个对象被当作参数传递到一个方法后，此方法可改变这个对象的属性，并可返回变化后的结果，那么这里到底是值传递还是引用传递？
 - 静态属性和静态方法是否可以被继承？是否可以被重写？以及原因？ 静态内部类的设计意图？
-
+- 【内部类与final】为什么内部类调用的外部变量必须是final修饰的？final的作用是什么，被final修饰的类，可以改变类里面的属性吗？ final, finally, finalize 的区别？
+- 【继承】继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
+- 【抽象类与接口】接口是否可继承(extends)接口? 抽象类是否可实现(implements)接 口? 抽象类是否可继承具体类(concrete class)?
+- 【面向对象】面向对象有哪些特征？继承，封装，多态，可以随意抽一个问细节？接口和抽象类有什么区别？
+- 【思想】说一下面向切面编程的思想，结合一个具体案例说一下
+- 【初始化】说一下什么是静态绑定和动态绑定，作用时机
 
 
 
@@ -81,6 +93,14 @@
 - TreeMap 是采用什么树实现的？TreeMap、HashMap、LindedHashMap的区别。
 - 有没有可能 两个不相等的对象有相同的 hashcode？当两个对象 hashcode 相同怎么办？如何获取值对象？
 - 为什么在重写 equals 方法的时候需要重写 hashCode 方法？equals与 hashCode 的异同点在哪里
+- 【fail-fast】什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
+- 【HashMap】HashMap的实现机制，底层数据结构是什么？怎么样HashMap线程安全，HashMap和HashTable有什么区别？HashMap如果Hash冲突了怎么解决？
+- 【List集合】ArrayList，Vector和LinkList的区别，底层分别是怎么实现的，存储空间是如何扩容的？什么是加载因子？
+- 【HashSet】HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
+- 【HashMap】为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
+- 【ConcurrentHashMap】ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？ConcurrentHashMap 如何实现高效地线程安全？
+- 【HashMap】HashMap 的 table的容量如何确定？loadFactor 是什么？ 该容量如何变化？这种变化会带来什么问题？
+- 【数组】在java中，声明一个数组过程中，是如何分配内存的？如何实现数组逆置？如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？
 
 
 
@@ -92,6 +112,9 @@
 - 如果执行finally代码块之前方法返回了结果，或者JVM退出了，finally块中的代码还会执行吗？在什么情况下，finally语句不会执行？
 - try里有return，finally还执行么？那么紧跟在这个try后的finally{}里的code会不会被执行，什么时候被执行，在return前还是后？
 - 当自己创建异常类的时候应该注意什么？异常处理 handle or declare 原则应该如何理解？catch块里别不写代码有什么问题？
+- 【异常】Exception和Error有什么区别？运行时异常与一般异常有什么区别？
+- 【异常捕获】try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的code会不会被执行，什么时候被执行，在 return 前还是后?
+- 【异常性能】try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
 
 
 
@@ -103,6 +126,8 @@
 - Java 中如何停止一个线程？stop() 和 suspend() 方法为何不推荐使用？如何让正在运行的线程暂停一段时间？
 - 调用start()方法时会执行run()方法，为什么不能直接调用run()方法？你是如何调用 wait（方法的）？使用 if 块还是循环？为什么
 - 说说生产者-消费者问题，如何保证生产者不会在缓冲区满时加入数据，消费者也不会在缓冲区空时消耗数据？
+- 【多线程】多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
+- 【线程】ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
 
 
 
@@ -132,6 +157,9 @@
 - newCache 和 newFixed 有什么区别？简述原理。构造函数的各个参数的含义是什么，比如 coreSize, maxsize 等
 - 什么是乐观锁（Optimistic Locking）？如何实现乐观锁？如何避免ABA问题？
 - Java中活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
+- 【锁机制】谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？对象锁和类锁是否会互相影响？
+- 【同步锁】静态同步锁与普通同步锁的区别？具体有哪些使用场景……
+- 【并发】volatile这个关键字是怎么理解的？在并发环境中如何确保程序的可见性、顺序性和一致性？
 
 
 
@@ -155,6 +183,12 @@
 - 哪些情况下的对象会被垃圾回收机制处理掉？JVM内存区域，开线程影响哪块内存？
 - 请从四大引用这块说一下GC的回收策略？引用计数法的思路是什么？引用计数法两个对象互相引用如何解决？
 - 如果对象的引用被置为null，垃圾收集器是否会立即释放对象占用的内存？
+- 【类加载机制】Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
+- 【GC机制】垃圾回收机制的原理是什么？这一块主要是了解是否对java虚拟机有了解……
+- 【四种引用】说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
+- 【加载器】什么是类加载器？类加载器工作机制是什么？类加载器种类？平常是怎么使用ClassLoader加载类的，说一下原理？
+- 什么时候发生类初始化？类初始化后对类的做了什么，加载变量，常量，方法都内存那个位置？
+- 【内存】说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
 
 
 
@@ -163,6 +197,9 @@
 - 如何提高反射的效率？反射优缺点有哪些？比如，反射损耗性能，怎么理解？
 - 如何反射获取内部类和调用内部类方法以及反射得到匿名内部类？
 - 如何通过反射创建对象？如何通过反射获取和设置对象私有字段的值？
+- 【反射】如何防止反射序列化攻击单例？反射中有个暴力访问权限方法，这个方法怎么实现的？如何避免发射攻击？
+- 【反射】什么是反射机制？反射机制的优缺点？通过设置setAccessible(true)暴力访问权限有什么危害？
+- 【反射】反射为何损耗性能，从jvm层面说一下你的看法？
 
 
 
