--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -19,6 +19,7 @@
     - 3.6 配对后连接蓝牙
     - 3.7 蓝牙数据传递
     - 3.8 设置扫描规则 
+    - 3.9 获取蓝牙信息
 - 04.蓝牙实践技术点
     - 4.1 蓝牙优化点 
     - 4.3 蓝牙功耗优化
@@ -56,6 +57,9 @@
     - 随后在检测到的设备接受配对请求后，设备之间完成绑定操作，并在此期间交换安全密钥。二者会缓存这些密钥，以供日后使用。
     - 完成配对和绑定过程后，两台设备会交换信息。当会话完成时，发起配对请求的设备会将其链接到可检测设备的通道。
 - 蓝牙现在还分经典蓝牙、低功耗蓝牙和双模蓝牙。
+    - 经典蓝牙：
+    - 低功耗蓝牙：
+    - 双模蓝牙：
 
 
 #### 1.4 开发设计目标
@@ -209,6 +213,9 @@
 
 
 #### 3.8 设置扫描规则 
+
+
+#### 3.9 获取蓝牙信息
 
 
 
