--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -216,7 +216,7 @@
 
 
 #### 3.9 获取蓝牙信息
-
+- 
 
 
 ### 04.蓝牙实践技术点
@@ -259,6 +259,14 @@
 ### 参考链接
 - [蓝牙官方文档](https://developer.android.google.cn/guide/topics/connectivity/bluetooth)
 - [蓝牙低功耗概览](https://developer.android.google.cn/guide/topics/connectivity/bluetooth-le)
+
+
+- Android 蓝牙聊天
+    - https://juejin.cn/post/6844903458689007629
+- Android:蓝牙实现一对一聊天
+    - https://juejin.cn/post/6844903862516580359
+
+
 
 
 - https://juejin.cn/post/6844903862516580359
