--- a/Read/ReadBlogWiki/06.职场总结/04.提高工作的效率.md
+++ b/Read/ReadBlogWiki/06.职场总结/04.提高工作的效率.md
@@ -28,8 +28,21 @@
 - 看看自己的日程表，是不是有一些会议要占用时间？今天要沟通的事情比较多？或者今天有事要外出？如果这样的话，就尽量少安排计划，避免事情做不完而产生的挫败。 
 
 
+#### 1.3 拟写晨间日记
+- 工作那么忙，每天处理的事情那么多，怎么安排时间，让自己高效工作的？很多人都会说，他们会通过做工作记录或者写工作日记的方式来管理时间。
+- 写日记这个事情也没有什么特别的道理，就是用了心理学上的正向激励的做法，通过每天的自我认可，让自己看问题、做事情更加正面。
+- **早上写小计划**
+- 今天让我感激的三件事情（感恩 => 柔软，平和）：
+- 今天让我变得更好的三件事情（todo list top 3 => 目标，聚焦）：
+- 今天我认可自己的一句话（自我激励）：
+- **晚上要去回顾**
+- 今天发生的三件很棒的事情(今日总结)：
+- 可以让今天更好的一件事（反思精进）：
+- 早上写完之后，晚上还可以去检查它完成得如何，这其实就形成了一个闭环。强烈建议每天花个三五分钟试一下，让自己的生活更加有条理，更加结构化。
 
-#### 1.3 学会拆解动作
+
+
+#### 1.4 学会拆解动作
 - 在职场上你会遇到一些“需要你花费最多时间”去解决的问题，而这个时候很多人常常觉得“要事第一”，一定要先搞完最难的那一个，可想而知最难的永远是最难搞定的。
 - 因为最重要的事通常都是最困难、最困惑的，你想搞定它，又不知道怎么下手，就无法进入工作状态了，自然也就无法提高工作效率了。所以建议学会拆解动作……
 - 你思考的只有一个问题：这件事情的下一步行动是什么？比如说做今天上午12点之前你需要完成地图开发技术方案，那么完成这个方案下一步行动是什么？
@@ -38,7 +51,7 @@
 
 
 
-#### 1.4 学会做笔记
+#### 1.5 学会做笔记
 - 很多时候你会发现职场上的事靠脑子是记不住的，所以我的建议是手边常备笔记本，针对一些突发或计划外、又不得不承接下来的事情，写在笔记本上，一方面是不要忘记了，另一方面是别让这种打扰影响你的工作状态。
 - 做笔记这个习惯，我到现在一直在坚持，结合上文中的“拟好每日清单”，你会发现坚持的时间越久，接下来工作思路越加清晰且有条理。**一般来说，做事的思维不好短时间改变，但可以慢慢改变习惯，然后影响思维**。
 
