--- a/Read/ReadMeWiki/04.架构设计/02.基础架构实践总结.md
+++ b/Read/ReadMeWiki/04.架构设计/02.基础架构实践总结.md
@@ -10,6 +10,9 @@
     - 3.4 接口设计图
     - 3.5 模块间依赖关系
 - 04.SDK设计思维点
+    - 4.1 基于接口开发
+    - 4.2 访问权限控制
+    - 4.3 
 - 05.SDK设计技术点
     - 5.3 Provider初始化
 - 06.SDK其他设计点
