--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -209,7 +209,9 @@
 
 
 #### 3.7 蓝牙数据传递
-
+- 主要是指蓝牙连接之后，然后使用socket进行数据传递
+    - 调用bluetoothDevice.createRfcommSocketToServiceRecord获取socket对象。然后再通过socket进行通信数据传递！
+- 什么叫做蓝牙串口通信
 
 
 #### 3.8 设置扫描规则 
