--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -1,104 +1,101 @@
 ### 目录介绍
 - 1.个人简介
 - 2.专业技能
-- 3.一些产出
-- 4.工作经历
-- 5.个人评价
-- 6.开源项目
+- 3.工作经历
+- 4.个人评价
+- 5.开源项目
+
 
 
 ### 1.个人简介
-- 姓名：杨充【29岁】
+- 姓名：杨充【30岁】
 - 电话：13667225184
 - 邮箱：yangchong211@163.com
 - GitHub：https://github.com/yangchong211
-- 目前工作情况：在职状态(滴滴RLab事业部)
-- 技术项目和博客：GitHub项目17k以上star，follower2k以上，发表博客150多篇。
-- 教育经历：武汉软件工程学院，计算机专业
+- 目前工作情况：在职状态(作业帮智能硬件-中台Android组)
+- 技术项目和博客：GitHub项目20k以上star，follower2k以上，发表博客150多篇。
+
 
 
 ### 2.专业技能
 - 基础技能
-    - 6年的Android开发经验，能独立地完成开发的工作。有github封装库长期维护的库！有组件化项目经验！
-    - 理解基本数据类型和包装类原理，并且开发中避免常识性bug，对泛型，线程，反射，异常，引用优化等有较深理解，具有扎实的Java语言基础。
-    - 对数据结构比如常见List，Map，Set，Deque，Stack等熟悉，能够结合实际场景选择合适的集合。
-    - 熟悉面向对象编程思想，熟练运用设计模式原则，写出高质量可复用，拓展性强，方便维护和阅读的代码，具体可见技术产出库。
-    - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，有接口健壮性自测能力。
-    - 熟悉Android中四大组件，Handler通信机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
+    - 具有扎实的Java语言基础，掌握基础数据结构，熟悉面向对象编程思想，熟练运用设计模式原则，热爱技术，长期维护开源项目。
+    - 熟悉Http协议，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，弱网模拟等工具。
+    - 熟悉Android四大组件，Handler通信机制，View绘制，事件机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
 - 中高级技术点
-    - 熟悉一些常用设计模式，比如单利模式，builder模式，工厂模式，订阅者模式，并且运用于实践项目开发中等等。
-    - 熟悉glide加载图片压缩，三级缓存，同异步加载，对象池优化，做过glide加载图片进度监听，图片加载优化等。
-    - 熟悉webView的加载url的流程，异常处理，WebView资源拦截缓存优化，以及白名单处理，loadUrl请求服务器资源的流程。
-    - 熟悉App应用程序崩溃流程和原理，熟悉应用卡顿监控方式Printer和WatchDog，利用hook尝试解决top2崩溃问题。
-    - 能够通过一些工具，辅助开发或者测试提高效率，比如在外卖骑手端，开发地图mock工具，导航mock工具，隔离解耦业务代码。比如贡献磁盘缓存查看工具，方便测试测试磁盘缓存。
+    - 熟悉Glide，OkHttp，LeakCanary，Jetpack等核心设计思想。熟悉App应用程序崩溃流程和原理，熟悉常见的性能优化和设计模式。
 - 高级技术点
     - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
     - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
-    - 熟悉组件化开发，模块分层，在立思辰承接多个app组件化抽离复用，提高开发效率，为后期多个定制开发平板app提供高效支持。
     - 懂得一些App稳定性治理，通过崩溃监控，核心链路埋点，降级处理，异常设计，代码串讲，技术复盘等手段，达到app稳定性指标。
-    - 懂得一些安全防护的知识，做过简单防范Xposed作弊器攻击App或者挂载App抓包网络数据的处理。
 
 
-### 3.一些产出
-- 在滴滴开发经历
-    - 按时按量完成需求开发，bug<3，线上工单<3/年，优化地图&导航异常降级，完善核心链路技术埋点，完善监控体系。
-    - 快速适应flutter混合开发，承担地图&导航&定位&其他等模块大改版，不断拉齐Android和iOS两端差异化，承接基础业务开发。
-    - 负责改版中flutter容器开发，地图业务channel通信，改造方案设计，地图&Flutter容器多点触摸事件分发处理。
-    - 开发磁盘缓存查看工具，极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
-- 在立思辰开发经历
-    - 负责项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码开发。将多个app不断完善抽取分离组件化module，为后期开发定制app快速高效打下基础。
-    - 通用视频播放器，用于4条业务线，开源star2k，解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
-    - 网络拦截小助手，内部开源，网络流程分析，记录每个网络请求->响应数据，方便查看很全面的请求头信息，响应头信息，以及body实体，以及网络连接，dns解析，TLS连接，请求响应等时间差……
-- 在大搜车开发经历
-    - 基于腾讯x5开源库，提高webView开发效率，大概要节约你百分之六十的时间成本，上搜车内部开源推荐库。设计过缓存方案，优化WebView加载资源，省流。
+
+### 3.工作经历
+#### 3.1 2022年4月到至今
+- 作业帮【**资深Android开发&组长**】
+    - 负责作业帮智能硬件作业帮智能App的Android开发【从0到1】
+- 负责的业务开发
+    - 1.负责智能硬件笔，文具盒跟App语音&视频通话方案的设计，推动，落地，并应用于市场。三端拉齐，App故障率<0.3%
+    - 2.负责App组件化落地，打造基础通用组件，比如日志写入文件并上传库，通用存储方案库，TTS库，弱网模拟工具，磁盘查看工具，App防抓包库等。在整个Android组做过5次分享！
+    - 3.负责设备绑定，台灯，笔，手表，文具盒等硬件与App交互通信的核心逻辑。通过tcp指令交互智能硬件设备，大多数家长使用反馈好，周使用率达到4次以上！
+- 在作业帮产出
+    - 1.设计并落地开发日志记录库，日志回捞库等。主要是将log日志写到文件，然后可以上传到服务端，开发根据核心链路日志辅助排查线上问题。有效提高故障排查！
+    - 2.设计并打造sp，lru，mmkv，map，dataStore通用存储方案库，创建通用API接口磨平各种存储差异性。使用统一api缓存，可以一键切换不同缓存方式。内部开源，多条业务线使用。
+    - 3.提高App产品数据安全，设计数据加密手段，sign签名，环境检测，还有各种防抓包策略，常规方式几乎完全保证了App安全性！
 
 
-### 4.工作经历
-#### 4.1 2022年4月到至今
-- 负责**作业帮**智能硬件Android开发
 
-
-#### 4.2 2020年4月份到2022年3月份
-- 负责**滴滴**RLab外卖骑手端App开发
+#### 3.2 2020年4月份到2022年3月份
+- 滴滴【**D7资深Android开发**】
+    - 负责滴滴RLab外卖骑手端App开发
+- 业务产出
     - 1.对地图原生业务优化，主要是组件分化，极大解决类业务臃肿问题，不断完善，提高代码阅读性和可维护性。
     - 2.负责外卖骑手端App中地图模块，导航模块，行程模块等相关的业务。开发无延期，确保自测质量，线上事故<3全年。
     - 3.落地针对地图，导航，奖励，定位等模块转向flutter技术改造，定义两端交互通信接口，拉起Android和iOS交互逻辑。
-    - 4.跨端，跨组，跨事业部，外卖C和D端4人共同开发IM发送地图flutter插件sdk(仿照微信发送地图)，设计方案，地图元素重叠算法，架构设计，降级，核心链路埋点，上线两月中无崩溃无工单。
+    - 4.跨端，跨组，跨事业部，外卖C和D端4人共同开发IM发送地图flutter插件sdk(仿照微信发送地图)，设计方案，架构设计，降级，核心链路埋点，上线两月中无崩溃无工单。
+- 在滴滴产出
+    - 按时按量完成需求开发，bug<3，线上工单<3/年，优化地图&导航异常降级，完善核心链路技术埋点，完善监控体系。
+    - 快速适应flutter混合开发，承担地图&导航&定位&其他等模块大改版，不断拉齐Android和iOS两端差异化，承接基础业务开发。
+    - 开发磁盘缓存查看工具，极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
 
 
 
-#### 4.3 2018年7月到2020年3月
-- 负责**大搜车**旗下一鹿有车项目开发迭代【从0到1，百万级应用】
+#### 3.3 2018年7月到2020年3月
+- 大搜车【**P6资深Android开发**】
+    - 负责大搜车旗下一鹿有车项目开发迭代【从0到1，百万级应用】
 - 一鹿有车Android开发经历
     - 1.重构项目，主导进行MVP架构的更改，以及技术选型方案的商讨和制定。封装公共组件和基础base类，统一项目中弹窗，页面状态管理切换，网络请求等。
     - 2.承接app中首页，视频，选车，详情，h5等多个模块业务开发。对于模仿易车，懂车帝，汽车之家等app，致敬对手app，确定技术方案，以及和服务端确定实践方案。
-    - 3.项目中，封装了adapter分组库，富文本库，弹窗库，以及webView库等等，GitHub开源持续迭代。
-- 负责工作
-    - 1.负责项目基础重构搭建，负责需求业务开发以及自测。中间组件开发和维护，其中富文本组件用于3个app，webView库用于2个app。
 - 无测试状态
     - 1.项目需求写完，自己自测，和同事互测，几乎养成自测习惯，写代码有规范意识和强迫症。多次在公司内部技术分享。
+- 在大搜车产出
+    - 负责项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码开发。将多个app不断完善抽取分离组件化module，为后期app快速高效复用打下基础。
+    - 通用视频播放器，用于4条业务线，开源star2k，解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
+    - 基于腾讯x5开源库，提高webView开发效率，大概要节约你百分之六十的时间成本，上搜车内部开源推荐库。设计过缓存方案，优化WebView加载资源，省流。
+    - 网络拦截小助手，内部开源，网络流程分析，记录每个网络请求->响应数据，方便查看很全面的请求头信息，响应头信息，以及body实体，以及网络连接，dns解析，TLS连接，请求响应等时间差……
 
 
 
-#### 4.4 2015年9月到2018年7月
+#### 3.4 2015年9月到2018年7月
 - 工作阶段
     - 第一阶段：投资界NWD部门(15年9月-17年11月)，对于投资界App(新闻类)，负责代码架构优化，迭代；对于新芽App(资讯工具类)，负责新芽客户端独立开发工作。
     - 第二阶段：清科创业IMC部分(17年11月-18年7月)，负责开发沙丘大学App(知识付费视频播放类)。
 - 北京清科集团Android开发经历
     - 1.根据产品的需求，对应用进行开发和后期的迭代维护，并且逐渐制定了代码注释命名规范文档。
     - 2.将接手过来的代码，逐步重构，慢慢由MVC架构模式转变成MVP架构模式，对项目模块结构进行划分和抽象，较大程度解决之前代码臃肿和维护难问题。
-    - 3.使用了builder模式封装了状态管理器库，有效管理了加载数据中，加载数据成功，失败，空数据，网络错误等多种试图页面切换。开源后颇受好评……
 
 
-### 5.个人评价
+
+### 4.个人评价
 - 极度自律，喜欢编程，能够克服开发过程中绝大部分的技术问题，对于GitHub开源项目持续更新和维护。
 - 虽然工作上不是很聪明，但是做事靠谱和认真，一步一个脚印，有始有终，能够持续不断完善自我，不算会表达。
-- 擅长进行自我反省和复盘，傻逼一样的坚持学习，不甩锅，不怕996，偶尔007也没问题，能承担压力并且有产出。
+- 擅长进行自我反省和复盘，做事闭环，坚持学习，不甩锅，能承担压力并且有产出，提高业务或者技术收益。
 
 
 
-### 6.开源项目
-- 开源了组件化项目，技术博客汇总，视频播放器封装库，webView库，组件接口通信库，状态管理器，recyclerView封装库等等。
+### 5.开源项目
+- 开源了组件化项目，技术博客汇总，视频播放器封装库，稳定性工具，组件接口通信库，状态管理器等等。
 - 通用视频播放器：https://github.com/yangchong211/YCVideoPlayer
 - 崩溃和网络库：https://github.com/yangchong211/YCAndroidTool
 - 掘金博客：https://juejin.im/user/5939433efe88c2006afa0c6e/posts
