--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -33,7 +33,7 @@
 
 ### 3.工作经历
 #### 3.1 2022年4月到至今
-- 作业帮【**资深Android开发&组长**】
+- 作业帮【**资深Android开发**】
     - 负责作业帮智能硬件作业帮智能App的Android开发【从0到1】
 - 负责的业务开发
     - 1.负责智能硬件笔，文具盒跟App语音&视频通话方案的设计，推动，落地，并应用于市场。三端拉齐，App故障率<0.3%
