--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -10,6 +10,8 @@
     - 2.3 Native崩溃流程
     - 2.4 崩溃日志处理
     - 2.5 最后推出App
+    - 2.6 崩溃流程叙述
+    - 2.7 Binder死亡通知
 - 03.崩溃处理入口
     - 3.1 Java处理异常入口
     - 3.2 异常处理常用api
@@ -252,6 +254,26 @@
 - App常见友好的推出方式
     - 杀死进程：先回退到桌面，然后`finish`掉所有`activity`页面，然后在杀死进程和推出程序。可以避免闪一下……
 
+
+#### 2.6 崩溃流程叙述
+- App崩溃流程图
+    - ![image](https://img-blog.csdnimg.cn/c71c28d9dbf64f5c84a6662135675c37.png)
+- 崩溃流程叙述
+    - 1、首先发生crash所在进程，在`RuntimeInit`创建之初便准备好了defaultUncaughtHandler，用来来处理Uncaught Exception，并输出当前crash基本信息；
+    - 2、调用当前进程中的`AMP.handleApplicationCrash`，经过binder ipc机制，传递到system_server进程；
+    - 3、接下来，进入system_server进程，调用binder服务端执行`AMS.handleApplicationCrash`；
+    - 4、从`AMS.findAppProcess`查找到目标进程的ProcessRecord对象；然后调用`AMS.handleApplicationCrashInner`，并将进程crash信息输出到目录/data/system/dropbox；
+    - 5、执行`ActivityManagerService#addErrorToDropBox()`，这个就是将crash，anr，装到盒子里。这个主要在下面会说到；
+    - 6、回到`RuntimeInit`处理崩溃finally中，执行杀死进程操作，当crash进程被杀，通过binder死亡通知，告知system_server进程来执行appDiedLocked()；
+
+
+
+#### 2.7 Binder死亡通知
+- 还需要了解下binder 死亡通知的原理，其流程图如下所示：
+    - ![image](https://img-blog.csdnimg.cn/74050ebda732407da7125ba2aa8f4b1d.png)
+- binder 死亡通知原理
+    - 由于Crash进程中拥有一个Binder服务端ApplicationThread，而应用进程在创建过程调用attachApplicationLocked()，从而attach到system_server进程，在system_server进程内有一个ApplicationThreadProxy，这是相对应的Binder客户端。
+    - 当Binder服务端ApplicationThread所在进程(即Crash进程)挂掉后，则Binder客户端能收到相应的死亡通知，从而进入binderDied流程。
 
 
 ### 03.崩溃处理入口
