--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -75,12 +75,18 @@
 ### 02.View工作原理问题
 - requestLayout、invalidate与postInvalidate作用与区别，在requestLayout这个方法里面做了什么？
 - requestLayout，onLayout，onDraw，DrawChild区别与联系？drawChild()是做什么用的？
-- LinerLayout跟RelativeLayout的绘制原理？RelativeLayout两次都测量什么……？
-- View绘制流程，当一个TextView的实例调用setText()方法后执行了什么？请说一下原理……
-- 什么是MeasureSpec，主要作用是什么？包含三种布局模式分别是什么？getWidth()方法和getMeasureWidth()区别呢？
 - View是如何绘制到屏幕上的？View的刷新机制是什么，有哪些重要的方法？
 - Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
-- Activity、PhoneWindow、DecorView、ViewRootImpl 之间的关系？四者的创建时机？
+- View绘制流程，当一个TextView的实例调用setText()方法后执行了什么？请说一下原理……
+- 测量：如何理解View中的测量？子控件的测量依赖父布局约束吗？如何理解测量过程中的"递"和"归"的设计思想？
+- 测量：如何理解测量中布局MeasureSpec的设计？mode三种布局模式分别如何理解？mode和size的组成如何理解？
+- 测量：单个控件测量流程是怎么样的？测量策略是如何影响测量结果的？如何标记测量完成？谈一下设计思想？
+- 测量：完整的View树测量流程的设计思路是什么样的？遍历测量孩子的大小如何处理margin和padding逻辑？
+- 布局：getWidth()方法和getMeasureWidth()区别呢？布局的设计思路是什么？
+- 布局：单个View的布局流程是怎么样的？如何理解布局中相对位置和绝对位置？什么情况下需要对控件重新布局？
+- 布局：以LinearLayout为例，完整布局流程是怎么样的。如果其中的一个孩子View修改了top高度，其布局流程会发生什么变化？
+- 绘制：在View中draw绘制思路是如何设计的？ViewGroup中dispatchDraw分发绘制设计思路是怎样的？
+- 绘制：说一下绘制中surface起到什么作用？draw里面绘制了那些东西，简要介绍一下？
 
 
 
