--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -9,7 +9,6 @@
 - 07.App启动流程优化
 - 09.主流库问题大汇总
 - 10.so库崩溃问题汇总
-- 11.Android性能优化
 
 
 
@@ -23,7 +22,8 @@
 
 
 ### 02.崩溃相关问题汇总
-- SharePreference性能优化，可以做进程同步吗？具体是怎么优化的呢？
+- 崩溃流程：App发生了崩溃，说一下崩溃处理流程。系统如何统一处理App崩溃？App崩溃后如何处理信息写入文件？
+- 崩溃原理：App崩溃后如何杀死进程？杀死进程的流程是什么，说一下Binder死亡通知的原理？
 
 
 
