--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -14,7 +14,7 @@
 - GitHub：https://github.com/yangchong211
 - 目前工作情况：在职状态(作业帮智能硬件-中台Android组)
 - 技术项目和博客：GitHub项目20k以上star，follower2k以上，发表博客150多篇。
-
+- 学校：武汉软件工程职业学院
 
 
 ### 2.专业技能
