--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -21,6 +21,7 @@
 
 
 
+
 ### 02.崩溃相关问题汇总
 - 崩溃流程：App发生了崩溃，说一下崩溃处理流程。系统如何统一处理App崩溃？App崩溃后如何处理信息写入文件？
 - 崩溃原理：App崩溃后如何杀死进程？杀死进程的流程是什么，说一下Binder死亡通知的原理？
@@ -35,6 +36,9 @@
 
 
 ### 04.ANR相关问题汇总
+- ANR监控：
+- ANR查看：
+- ANR解决：
 - ANR如何解决，trace.txt如何看？
 - 对于Android APP闪退，可能的原因有哪些？请针对每种情况简述分析过程。ANR在bugly等第三方崩溃检测平台上有日志信息吗？是在哪里？
 
