--- a/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
@@ -20,6 +20,7 @@
     - 3.5 那些极端情况不会ANR
     - 3.6 ANR静默和弹窗
     - 3.7 处理ANR信息收集
+    - 3.8 dump进程stack
 - 04.ANR是怎么设计
     - 4.1 什么是输入系统
     - 4.2 系统进程输入系统
@@ -337,70 +338,15 @@
 
 
 #### 3.7 处理ANR信息收集
-- 为了方便定位，因此需要收集ANR信息。下面代码还是appNotResponding方法，主要是收集信息的重要代码。
+- 为了方便定位，因此需要收集ANR信息。下面代码还是`appNotResponding`方法，主要是收集信息的重要代码。
     - dump很多信息到ANR Trace文件里，下面的逻辑就是选择需要dump的进程。
     - ANR Trace文件是包含许多进程的Trace信息的，因为产生ANR的原因有可能是其他的进程抢占了太多资源
-    ```
-    void appNotResponding(String activityShortComponentName, ApplicationInfo aInfo,
-            String parentShortComponentName, WindowProcessController parentProcess,
-            boolean aboveSystem, String annotation) {
-            firstPids.add(pid);
-    
-            // Don't dump other PIDs if it's a background ANR
-            if (!isSilentAnr()) {
-                int parentPid = pid;
-                if (parentProcess != null && parentProcess.getPid() > 0) {
-                    parentPid = parentProcess.getPid();
-                }
-                if (parentPid != pid) firstPids.add(parentPid);
-    
-                if (MY_PID != pid && MY_PID != parentPid) firstPids.add(MY_PID);
-    
-                for (int i = getLruProcessList().size() - 1; i >= 0; i--) {
-                    ProcessRecord r = getLruProcessList().get(i);
-                    if (r != null && r.thread != null) {
-                        int myPid = r.pid;
-                        if (myPid > 0 && myPid != pid && myPid != parentPid && myPid != MY_PID) {
-                            if (r.isPersistent()) {
-                                firstPids.add(myPid);
-                                if (DEBUG_ANR) Slog.i(TAG, "Adding persistent proc: " + r);
-                            } else if (r.treatLikeActivity) {
-                                firstPids.add(myPid);
-                                if (DEBUG_ANR) Slog.i(TAG, "Adding likely IME: " + r);
-                            } else {
-                                lastPids.put(myPid, Boolean.TRUE);
-                                if (DEBUG_ANR) Slog.i(TAG, "Adding ANR proc: " + r);
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    
-        // don't dump native PIDs for background ANRs unless it is the process of interest
-        String[] nativeProcs = null;
-        if (isSilentAnr()) {
-            for (int i = 0; i < NATIVE_STACKS_OF_INTEREST.length; i++) {
-                if (NATIVE_STACKS_OF_INTEREST[i].equals(processName)) {
-                    nativeProcs = new String[] { processName };
-                    break;
-                }
-            }
-        } else {
-            nativeProcs = NATIVE_STACKS_OF_INTEREST;
-        }
-    
-        int[] pids = nativeProcs == null ? null : Process.getPidsForCommands(nativeProcs);
-        ArrayList<Integer> nativePids = null;
-    
-        if (pids != null) {
-            nativePids = new ArrayList<>(pids.length);
-            for (int i : pids) {
-                nativePids.add(i);
-            }
-        }
-    }
-    ```
+- 具体看：`AMS.appNotResponding`流程代码
+    - 输出ANR Reason信息到EventLog. 也就是说ANR触发的时间点最接近的就是EventLog中输出的am_anr信息。
+    - 收集并输出重要进程列表中的各个线程的traces信息，该方法较耗时。
+    - 输出当前各个进程的CPU使用情况以及CPU负载情况。
+    - 将traces文件和CPU使用情况信息保存到dropbox，即data/system/dropbox目录（ANR信息最为重要的信息）。
+    - 根据进程类型，来决定直接后台杀掉，还是弹框告知用户。
 - 选择需要dump的进程的逻辑需要大概说下
     - 需要被dump的进程被分为了firstPids、nativePids以及extraPids三类。
     - 拿到需要dump的所有进程的pid后，AMS开始按照firstPids、nativePids、extraPids的顺序dump这些进程的堆栈
@@ -410,6 +356,15 @@
             nativePids);
     ```
 
+
+#### 3.8 dump进程stack
+- 具体看：`AMS.dumpStackTraces`流程代码
+- 1、收集firstPids进程的stacks：
+    - 第一个是发生ANR进程；第二个是system_server；其余的是mLruProcesses中所有的persistent进程。
+- 2、收集Native进程的stacks。(dumpNativeBacktraceToFile)
+    - 依次是mediaserver，sdcard，surfaceflinger进程。
+- 3、收集lastPids进程的stacks：
+    - 依次输出CPU使用率top 5的进程；
 
 
 ### 04.ANR是怎么设计
@@ -455,9 +410,9 @@
 
 #### 4.3 组件类型ANR
 - `ANR`是一套监控`Android`应用响应是否及时的机制，可以把发生`ANR`比作是 **引爆炸弹**，那么整个流程包含三部分组成：
-- **埋定时炸弹**：中控系统(`system_server`进程)启动倒计时，在规定时间内如果目标(应用进程)没有干完所有的活，则中控系统会定向炸毁(杀进程)目标。
-- **拆炸弹**：在规定的时间内干完工地的所有活，并及时向中控系统报告完成，请求解除定时炸弹，则幸免于难。
-- **引爆炸弹**：中控系统立即封装现场，抓取快照，搜集目标执行慢的罪证(`traces`)，便于后续的案件侦破(调试分析)，最后是炸毁目标。
+    - **埋定时炸弹**：中控系统(`system_server`进程)启动倒计时，在规定时间内如果目标(应用进程)没有干完所有的活，则中控系统会定向炸毁(杀进程)目标。
+    - **拆炸弹**：在规定的时间内干完工地的所有活，并及时向中控系统报告完成，请求解除定时炸弹，则幸免于难。
+    - **引爆炸弹**：中控系统立即封装现场，抓取快照，搜集目标执行慢的罪证(`traces`)，便于后续的案件侦破(调试分析)，最后是炸毁目标。
 
 
 #### 4.4 Input类型ANR
@@ -472,48 +427,46 @@
 
 #### 4.5 事件分发异步机制
 - 先抛出一个新的问题，对处于`system_server`进程`Native`层级的 **事件分发** 而言，其向下与 **应用进程** 的通信的过程应该是同步还是异步的？
+    - 对于读者而言，不难得出答案是异步的，因为两者之间双向通信的建立是通过`SocketPair`，并且，因为`system_server`中`InputDispatcher`对事件的分发实际上是一对多的，如果是同步的，那么一旦其中一个应用分发超时，那么`InputDispatcher`线程自然被卡住，其永远都不可能进入到下一轮的事件分发中，**扫雷** 机制更是无从谈起。
+    - 因此，与应用进程中事件分发不同的是，后者我们通常可以认为是在主线程中同步的，而对于整个 **输入系统** 而言，因为涉及到 **系统进程** 与多个 **应用进程** 之间异步的通信，因此其内部的实现更为复杂。
+    - 因为事件分发涉及到异步回调机制，因此`InputDispatcher`需要对事件进行维护和管理，那么问题就变成了，使用什么样的数据结构去维护这些输入事件比较合适。
+- 三个队列
+    - `InputDispatcher`的源码实现中，整体的事件分发流程共使用到3个事件队列：
+    * mInBoundQueue：用于记录`InputReader`发送过来的输入事件；
+    * outBoundQueue：用于记录即将分发给目标应用窗口的输入事件；
+    * waitQueue：用于记录已分发给目标应用，且应用尚未处理完成的输入事件。
+    - 笔者通过2轮事件分发的示例，对三个队列的作用进行简单的梳理。
+- 第一轮事件分发
+    - 首先`InputReader`线程通过`EventHub`监听到底层的输入事件上报，并将其放入了`mInBoundQueue`中，同时唤醒了`InputDispatcher`线程。
+    - 然后`InputDispatcher`开始了第一轮的事件分发，此时并没有正在处理的事件，因此`InputDispatcher`从`mInBoundQueue`队列头部取出事件，并重置`ANR`的计时，并检查窗口是否就绪，此时窗口准备就绪，将该事件转移到了`outBoundQueue`队列中，因为应用管道对端连接正常，因此事件从`outBoundQueue`取出，然后放入了`waitQueue`队列，因为`Socket`双向通信已经建立，接下来就是 **应用进程** 接收到新的事件，然后对其进行分发。
+    - 如果 **应用进程** 事件分发正常，那么会通过`Socket`向`system_server`通知完成，则对应的事件最终会从`waitQueue`队列中移除。
+- 第二轮事件分发
+    - 如果第一轮事件分发尚未接收到回调通知，第二轮事件分发抵达又是如何处理的呢？
+    - 第二轮事件到达`InputDispatcher`时，此时`InputDispatcher`发现有事件正在处理，因此不会从`mInBoundQueue`取出新的事件，而是直接检查窗口是否就绪，若未就绪，则进入`ANR`检测状态。
+- 以下几种情况会导致进入`ANR`检测状态：
+    > 1、目标应用不会空，而目标窗口为空。说明应用程序在启动过程中出现了问题；
+    > 2、目标`Activity`的状态是`Pause`，即不再是`Focused`的应用；
+    > 3、目标窗口还在处理上一个事件。
+- 读者需要理解，并非所有「目标窗口还在处理上一个事件」都会抛出`ANR`，而是需要通过检测时间，如果未超时，那么直接中止本轮事件分发，反之，如果事件分发超时，那么才会确定`ANR`的发生。
+    - 这也正是将`Input`类型的`ANR`描述为 **扫雷** 的原因：这里的扫雷是指当前输入系统中正在处理着某个耗时事件的前提下，后续的每一次`input`事件都会检测前一个正在处理的事件是否超时（进入扫雷状态），检测当前的时间距离上次输入事件分发时间点是否超时。如果前一个输入事件，则会重置`ANR`的`timeout`，从而不会爆炸。
+    - 至此，**输入系统** 检测到了`ANR`的发生，并向上层抛出了本次`ANR`的相关信息。
 
-对于读者而言，不难得出答案是异步的，因为两者之间双向通信的建立是通过`SocketPair`，并且，因为`system_server`中`InputDispatcher`对事件的分发实际上是一对多的，如果是同步的，那么一旦其中一个应用分发超时，那么`InputDispatcher`线程自然被卡住，其永远都不可能进入到下一轮的事件分发中，**扫雷** 机制更是无从谈起。
 
-因此，与应用进程中事件分发不同的是，后者我们通常可以认为是在主线程中同步的，而对于整个 **输入系统** 而言，因为涉及到 **系统进程** 与多个 **应用进程** 之间异步的通信，因此其内部的实现更为复杂。
+### 05.ANR监控排查思路
+#### 5.1 ANR监控整体思路
+- Android系统监测ANR的核心原理是消息调度和超时处理。
 
-因为事件分发涉及到异步回调机制，因此`InputDispatcher`需要对事件进行维护和管理，那么问题就变成了，使用什么样的数据结构去维护这些输入事件比较合适。
 
-### 4、三个队列
 
-`InputDispatcher`的源码实现中，整体的事件分发流程共使用到3个事件队列：
+#### 5.2 目前流行方案
+- 1、使用FileObserver监听 /data/anr/traces.txt的变化
+    - 缺点：高版本ROM需要root权限。解决方案：海外Google Play服务、国内Hardcoder
+- 2、监控消息队列的运行时间（WatchDog）
+    - 利用主线程的消息队列处理机制，应用发生卡顿，一定是在dispatchMessage中执行了耗时操作。通过给主线程的Looper设置一个Printer，打点统计dispatchMessage方法执行的时间，如果超出阀值，表示发生卡顿，则dump出各种信息，提供开发者分析性能瓶颈。
+    - 为卡顿监控代码增加ANR的线程监控，在发送消息时，在ANR线程中保存一个状态，主线程消息执行完后再Reset标志位。如果在ANR线程中收到发送消息后，超过一定时间没有复位，就可以任务发生了ANR。
 
-* mInBoundQueue：用于记录`InputReader`发送过来的输入事件；
-* outBoundQueue：用于记录即将分发给目标应用窗口的输入事件；
-* waitQueue：用于记录已分发给目标应用，且应用尚未处理完成的输入事件。
 
-下文，笔者通过2轮事件分发的示例，对三个队列的作用进行简单的梳理。
-
-#### 4.1 第一轮事件分发
-
-首先`InputReader`线程通过`EventHub`监听到底层的输入事件上报，并将其放入了`mInBoundQueue`中，同时唤醒了`InputDispatcher`线程。
-
-然后`InputDispatcher`开始了第一轮的事件分发，此时并没有正在处理的事件，因此`InputDispatcher`从`mInBoundQueue`队列头部取出事件，并重置`ANR`的计时，并检查窗口是否就绪，此时窗口准备就绪，将该事件转移到了`outBoundQueue`队列中，因为应用管道对端连接正常，因此事件从`outBoundQueue`取出，然后放入了`waitQueue`队列，因为`Socket`双向通信已经建立，接下来就是 **应用进程** 接收到新的事件，然后对其进行分发。
-
-如果 **应用进程** 事件分发正常，那么会通过`Socket`向`system_server`通知完成，则对应的事件最终会从`waitQueue`队列中移除。
-
-#### 4.2 第二轮事件分发
-
-如果第一轮事件分发尚未接收到回调通知，第二轮事件分发抵达又是如何处理的呢？
-
-第二轮事件到达`InputDispatcher`时，此时`InputDispatcher`发现有事件正在处理，因此不会从`mInBoundQueue`取出新的事件，而是直接检查窗口是否就绪，若未就绪，则进入`ANR`检测状态。
-
-以下几种情况会导致进入`ANR`检测状态：
-
-> 1、目标应用不会空，而目标窗口为空。说明应用程序在启动过程中出现了问题；
-> 2、目标`Activity`的状态是`Pause`，即不再是`Focused`的应用；
-> 3、目标窗口还在处理上一个事件。
-
-读者需要理解，并非所有「目标窗口还在处理上一个事件」都会抛出`ANR`，而是需要通过检测时间，如果未超时，那么直接中止本轮事件分发，反之，如果事件分发超时，那么才会确定`ANR`的发生。
-
-这也正是将`Input`类型的`ANR`描述为 **扫雷** 的原因：这里的扫雷是指当前输入系统中正在处理着某个耗时事件的前提下，后续的每一次`input`事件都会检测前一个正在处理的事件是否超时（进入扫雷状态），检测当前的时间距离上次输入事件分发时间点是否超时。如果前一个输入事件，则会重置`ANR`的`timeout`，从而不会爆炸。
-
-至此，**输入系统** 检测到了`ANR`的发生，并向上层抛出了本次`ANR`的相关信息。
+#### 5.3 ANR捕获设计
 
 
 ### 05.参考资料
