--- a/Read/ReadMeWiki/00.方案实践/05.ANR治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR治理优化实践.md
@@ -1,10 +1,7 @@
 #### 目录介绍
 - 01.ANR整体概述
     - 1.1 项目背景介绍
-    - 1.2 遇到问题
-    - 1.3 基础概念介绍
-    - 1.4 设计目标
-    - 1.5 产生收益分析
+    - 1.2 ANR分类
 - 02.ANR基础分析
     - 2.1 如何查看ANR日志
 
@@ -15,25 +12,35 @@
 #### 1.1 项目背景介绍
 
 
-#### 1.2 遇到问题
+#### 1.2 ANR分类
+- 发生场景
+    - Activity onCreate方法或Input事件超过5s没有完成
+    - BroadcastReceiver前台10s，后台60s
+    - ContentProvider 在publish过超时10s;
+    - Service前台20s，后台200s
+- 发生原因
+    - 主线程有耗时操作
+    - 复杂布局
+    - IO操作
+    - 被子线程同步锁block
+    - 被Binder对端block
+    - Binder被占满导致主线程无法和SystemServer通信
+    - 得不到系统资源（CPU/RAM/IO）
+- 从进程角度看发生原因有：
+    - 当前进程：主线程本身耗时或者主线程的消息队列存在耗时操作、主线程被本进程的其它子线程所blocked
+    - 远端进程：binder call、socket通信
 
-
-#### 1.3 基础概念介绍
-- ANR-WatchDog 单独起一个子线程向主线程发送一个重置变量操作的Runnable，然后休眠一段时间（自定义的ANR超时时间），如果休眠后该变量的值没有被重置，则表明有ANR发生。
-
-
-#### 1.4 设计目标
-
-
-#### 1.5 产生收益分析
 
 
 ### 02.ANR基础分析
 #### 2.1 如何查看ANR日志
 - 如何查看ANR信息？
-    - 
-- 如何查看App发生ANR日志文件？
-    - 
+    - 1、抓取bugreport。adb shell bugreport > bugreport.txt
+    - 2、直接导出/data/anr/traces.txt文件。adb pull /data/anr/traces.txt
+
+
+
+
 
 
 
