--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -36,11 +36,10 @@
 
 
 ### 04.ANR相关问题汇总
+- ANR基础：
 - ANR监控：
 - ANR查看：
-- ANR解决：
-- ANR如何解决，trace.txt如何看？
-- 对于Android APP闪退，可能的原因有哪些？请针对每种情况简述分析过程。ANR在bugly等第三方崩溃检测平台上有日志信息吗？是在哪里？
+- ANR解决：ANR如何解决，trace.txt如何看？
 
 
 
