--- a/Read/ReadMeWiki/01.大型方案/20.通用日志上传实践.md
+++ b/Read/ReadMeWiki/01.大型方案/20.通用日志上传实践.md
@@ -38,6 +38,10 @@
     - 6.4 参考链接
 
 
+### 00.问题总结思考
+- 日志上传：日志上传的业务逻辑是什么样的？有什么收益？日志上传总体设计方案是什么样的？
+
+
 ### 01.整体概述
 #### 1.1 项目背景
 - 哪类bug使我们比较头疼？个案、难复现、无可用信息……
@@ -162,8 +166,7 @@
     - 第三步：将符合条件日志文件，压缩到zip包
     - 第四步：将zip包，上传到网络指定的接口(包括接口和公共参数拼接)，有错误重试机制
     - 第五步: 上传成功后，删除本地zip文件
-- 还有些关键点说明
-    - 待完善
+
 
 
 #### 3.6 日志安全性考虑
@@ -211,15 +214,28 @@
 
 ### 04.方案基础设计
 #### 4.1 整体架构图
+- 整体架构流程图
+    - ![image](https://img-blog.csdnimg.cn/d3a43dd538634f4c9cd3018b01f853c4.png)
+    - ![image](https://img-blog.csdnimg.cn/1da2148642ef4c59bcd9b72c17135a96.png)
+
 
 
 #### 4.2 UML设计图
 
 
 #### 4.3 关键流程图
+- 日志回捞流程图
+    - ![image](https://img-blog.csdnimg.cn/11cf5259a0744d83834dbb7f9f5b3f96.png)
+
 
 
 #### 4.4 接口设计图
+- 上报文件接口图
+    - ![image](https://img-blog.csdnimg.cn/3655f6bf01f74fb0bb86925d851623fb.png)
+- 稳定性接口图
+    - ![image](https://img-blog.csdnimg.cn/798486f50c7849a8affe9b68134c62f9.png)  
+
+
 
 
 #### 4.5 模块间依赖关系
