--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -11,7 +11,18 @@
     - 2.4 Socket和ServerSocket
 - 03.Socket实践思路
     - 3.1 基础实践步骤
-- 04.通信实践坑
+    - 3.2 Socket连接
+    - 3.3 Socket中tls连接
+    - 3.4 Socket数据读写
+    - 3.5 Socket断开连接
+- 04.通信实践设计
+    - 4.1 设计Tcp初始化
+    - 4.2 设计Tcp监听
+    - 4.3 设计Tcp发送
+    - 4.4 断开重试的设计
+    - 4.5 TcpPacket设计
+    - 4.6 如何设计长链接
+    - 4.7 数据的封包和解析
     - 4.8 一些注意点
 - 05.方案设计
     - 5.1 整体架构图
@@ -84,7 +95,83 @@
 
 
 
-### 04.通信实践坑
+### 04.通信实践设计
+#### 4.1 设计Tcp初始化
+- 设计Tcp初始化的代码如下所示
+    ```
+    TcpFacade.putExtra(TcpFacade.UDID, "E1274F3EF737603D08FE758455F67AF9|0")
+        .setDynamicInfoDelegate { key ->
+            when (key) {
+                TcpFacade.TOKEN -> "token"
+            }
+        }
+        .setDisableTcpOnBackGround(false)
+        .setTrustManagerProvider(TrustManagerProviderUnSafe())
+        .init(this)
+    ```
+- TCP注册干了啥
+    - 传递了一些参数，比如用户token，uid，版本号，用户 secret。主要是客户端和服务端通信需要的一些关键参数。
+- Tcp初始化的流程图如下所示
+    - ![image](https://img-blog.csdnimg.cn/8a67646577144160bb94e2f5aa185f57.png)
+
+
+
+
+#### 4.2 设计Tcp监听
+- 设计Tcp监听的代码如下所示
+    ```
+    TcpFacade.registerTcpMessage(this) { tcpMessage ->
+        AppLogUtils.d("registerTcpMessage:${it}")
+        when (tcpMessage) {
+            is TcpCommonDialog -> {
+                //出事消息
+            }
+        }
+    }
+    ```
+- TCP添加监听消息流程图
+    - ![image](https://img-blog.csdnimg.cn/a288c472b5804e8c9207991961ab8c20.png)
+
+
+
+#### 4.3 设计Tcp发送
+- 设计Tcp监听的代码如下所示
+    ```
+    TcpFacade.getTcpManager().sendCall(
+        TcpLogin(token = token,uid = uid)
+    )
+    ```
+
+
+
+#### 4.4 断开重试的设计
+
+
+#### 4.5 数据的封包和解析
+
+
+
+#### 4.6 如何设计长链接
+- 轮训发送ping作用
+    - 客户端发送ping【无业务互动时】，而且还是一个轮训的，主要是保持长链接通畅。
+- 服务端发送pong包
+    - server端发送心跳pong包，主要是回应客户端信息。
+
+
+#### 4.7 数据的封包和解析
+- Tcp发送消息体【App发送tcp消息】
+    ```
+    TcpPacket(privateTag = TcpLogin_1656059681564,length = 157,version = 1,type = LOGIN(80),data:{"app_version":"2.3.0","device_type":1,"sig":"085494bfd8586f3b22d6725bec51556b","stamp":1656059681551,"token":"","udid":"56A58B4C989DDCF083F200F078A324B5|0"})
+    TcpPacket(privateTag = TcpPing_1656059681611,length = 2,version = 1,type = HEART_BEAT_PING(1),data:{})
+    ```
+- Tcp接收消息体【App接收tcp消息】
+    ```
+    TcpPacket(privateTag = 0_1656059681622,length = 58,version = 1,type = TCP_ERROR(0),data:{"type":80,"error_code":6,"error_msg":"缺少参数token"})
+    TcpPacket(privateTag = 2_1656059681653,length = 0,version = 1,type = HEART_BEAT_PONG(2),data:)
+    ```
+- 设计的
+
+
 #### 4.8 一些注意点
 - 实际应用中，在发生异常时，需要关闭 socket，并根据实际业务做一些错误处理工作。
 
