--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -7,8 +7,9 @@
 - 05.卡顿相关问题汇总
 - 06.稳定性相关的问题
 - 07.App启动流程优化
-- 09.主流库问题大汇总
-- 10.so库崩溃问题汇总
+- 08.主流库问题大汇总
+- 09.so库崩溃问题汇总
+- 10.项目设计问题汇总
 
 
 
@@ -60,7 +61,7 @@
 
 
 
-### 09.主流库问题大汇总
+### 08.主流库问题大汇总
 - Retrofit采用动态代理，那么什么是动态代理，有何特点？
 - 使用过什么图片加载库，Glide 的源码设计哪里很微妙？说一下三级缓存的原理？描述一下内存缓存的容器？
 - 官方为什么会把 HttpClient 和 HttpUrlConnection 替换为 OkHttp 默认实现？它有什么好处？
@@ -70,9 +71,12 @@
 
 
 
-### 10.so库崩溃问题汇总
+### 09.so库崩溃问题汇总
 - so奔溃如何解决？
 
+
+
+### 10.项目设计问题汇总
 
 
 
