--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -40,7 +40,7 @@
     - 2.负责App组件化落地，打造基础通用组件，比如日志写入文件并上传库，通用存储方案库，TTS库，弱网模拟工具，磁盘查看工具，App防抓包库等。在整个Android组做过5次分享！
     - 3.负责设备绑定，台灯，笔，手表，文具盒等硬件与App交互通信的核心逻辑。通过tcp指令交互智能硬件设备，大多数家长使用反馈好，周使用率达到4次以上！
 - 在作业帮产出
-    - 1.设计并落地开发日志记录库，日志回捞库等。主要是将log日志写到文件，然后可以上传到服务端，开发根据核心链路日志辅助排查线上问题。有效提高故障排查！
+    - 1.设计并落地开发日志记录库，完善核心链路日志，日志回捞库等。主要是将log日志写到文件，然后可以上传到服务端，开发根据核心链路日志辅助排查线上问题。有效提高故障排查！
     - 2.设计并打造sp，lru，mmkv，map，dataStore通用存储方案库，创建通用API接口磨平各种存储差异性。使用统一api缓存，可以一键切换不同缓存方式。内部开源，多条业务线使用。
     - 3.提高App产品数据安全，设计数据加密手段，sign签名，环境检测，还有各种防抓包策略，常规方式几乎完全保证了App安全性！
 
