--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -148,7 +148,7 @@
 
 
 #### 4.5 数据的封包和解析
-
+- 如何解析数据
 
 
 #### 4.6 如何设计长链接
@@ -160,6 +160,7 @@
 
 #### 4.7 数据的封包和解析
 - Tcp发送消息体【App发送tcp消息】
+    - 将消息组装成 TcpPacket 结构体，然后发送出去。需要注意：发送的消息体需要转化为字符串，然后再转化为byte字节
     ```
     TcpPacket(privateTag = TcpLogin_1656059681564,length = 157,version = 1,type = LOGIN(80),data:{"app_version":"2.3.0","device_type":1,"sig":"085494bfd8586f3b22d6725bec51556b","stamp":1656059681551,"token":"","udid":"56A58B4C989DDCF083F200F078A324B5|0"})
     TcpPacket(privateTag = TcpPing_1656059681611,length = 2,version = 1,type = HEART_BEAT_PING(1),data:{})
@@ -169,7 +170,14 @@
     TcpPacket(privateTag = 0_1656059681622,length = 58,version = 1,type = TCP_ERROR(0),data:{"type":80,"error_code":6,"error_msg":"缺少参数token"})
     TcpPacket(privateTag = 2_1656059681653,length = 0,version = 1,type = HEART_BEAT_PONG(2),data:)
     ```
-- 设计的
+- 设计的TcpPacket数据包体
+    - privateTag，tcp唯一标示，主要是类型和时间戳拼接成的tag字符串
+    - length，tcp长度，这个主要是指data的长度
+    - version，版本
+    - type，类型，用来区分一级消息类型
+    - data，数据，一个json对象
+
+
 
 
 #### 4.8 一些注意点
