--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -1,7 +1,7 @@
 ### 目录介绍
 - 1.个人简介
-- 2.专业技能
-- 3.工作经历
+- 2.工作经历
+- 3.专业技能
 - 4.个人评价
 - 5.开源项目
 
@@ -17,28 +17,15 @@
 - 学校：武汉软件工程职业学院
 
 
-### 2.专业技能
-- 基础技能
-    - 具有扎实的Java语言基础，掌握基础数据结构，熟悉面向对象编程思想，熟练运用设计模式原则，热爱技术，长期维护开源项目。
-    - 熟悉Http协议，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，弱网模拟等工具。
-    - 熟悉Android四大组件，Handler通信机制，View绘制，事件机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
-- 中高级技术点
-    - 熟悉Glide，OkHttp，LeakCanary，Jetpack等核心设计思想。熟悉App应用程序崩溃流程和原理，熟悉常见的性能优化和设计模式。
-- 高级技术点
-    - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
-    - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
-    - 懂得一些App稳定性治理，通过崩溃监控，核心链路埋点，降级处理，异常设计，代码串讲，技术复盘等手段，达到app稳定性指标。
 
-
-
-### 3.工作经历
-#### 3.1 2022年4月到至今
+### 2.工作经历
+#### 2.1 2022年4月到至今
 - 作业帮【**资深Android开发**】
     - 负责作业帮智能硬件作业帮智能App的Android开发【从0到1】
 - 负责的业务开发
-    - 1.负责智能硬件笔，文具盒跟App语音&视频通话方案的设计，推动，落地，并应用于市场。三端拉齐，App故障率<0.3%
+    - 1.负责智能硬件笔，文具盒跟App语音&视频通话方案的设计，推动，落地，并应用于市场。三端拉齐，App故障率<0.3%，bug<5
     - 2.负责App组件化落地，打造基础通用组件，比如日志写入文件并上传库，通用存储方案库，TTS库，弱网模拟工具，磁盘查看工具，App防抓包库等。在整个Android组做过5次分享！
-    - 3.负责设备绑定，台灯，笔，手表，文具盒等硬件与App交互通信的核心逻辑。通过tcp指令交互智能硬件设备，大多数家长使用反馈好，周使用率达到4次以上！
+    - 3.负责设备绑定，台灯，笔，手表，文具盒等硬件与App交互通信的核心逻辑。开发tcp通信库，通过tcp指令交互智能硬件设备，大多数家长使用反馈好，周使用率达到4次以上！
 - 在作业帮产出
     - 1.设计并落地开发日志记录库，完善核心链路日志，日志回捞库等。主要是将log日志写到文件，然后可以上传到服务端，开发根据核心链路日志辅助排查线上问题。有效提高故障排查！
     - 2.设计并打造sp，lru，mmkv，map，dataStore通用存储方案库，创建通用API接口磨平各种存储差异性。使用统一api缓存，可以一键切换不同缓存方式。内部开源，多条业务线使用。
@@ -46,22 +33,20 @@
 
 
 
-#### 3.2 2020年4月份到2022年3月份
+#### 2.2 2020年4月份到2022年3月份
 - 滴滴【**D7资深Android开发**】
     - 负责滴滴RLab外卖骑手端App开发
 - 业务产出
-    - 1.对地图原生业务优化，主要是组件分化，极大解决类业务臃肿问题，不断完善，提高代码阅读性和可维护性。
-    - 2.负责外卖骑手端App中地图模块，导航模块，行程模块等相关的业务。开发无延期，确保自测质量，线上事故<3全年。
-    - 3.落地针对地图，导航，奖励，定位等模块转向flutter技术改造，定义两端交互通信接口，拉起Android和iOS交互逻辑。
-    - 4.跨端，跨组，跨事业部，外卖C和D端4人共同开发IM发送地图flutter插件sdk(仿照微信发送地图)，设计方案，架构设计，降级，核心链路埋点，上线两月中无崩溃无工单。
+    - 1.对地图原生业务优化，主要是组件分化，极大解决类业务臃肿问题，完善核心链路技术埋点，完善监控体系。开发无延期，确保自测质量，bug<3，线上事故<3全年。
+    - 2.落地针对地图，导航，奖励，定位等模块转向flutter技术改造，定义两端交互通信接口，拉起Android和iOS交互逻辑。
+    - 3.跨端，跨组，跨事业部，外卖C和D端4人共同开发IM发送地图flutter插件sdk(仿照微信发送地图)，设计方案，架构设计，降级，核心链路埋点，上线两月中无崩溃无工单。
 - 在滴滴产出
-    - 按时按量完成需求开发，bug<3，线上工单<3/年，优化地图&导航异常降级，完善核心链路技术埋点，完善监控体系。
     - 快速适应flutter混合开发，承担地图&导航&定位&其他等模块大改版，不断拉齐Android和iOS两端差异化，承接基础业务开发。
     - 开发磁盘缓存查看工具，极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
+    - 开发App状态监听库并记录到日志库，提效；优化tts库，增加优先级播放，改善用户体验；开发隐私合规库工具和制定合规方案和测试方案，并统一落地。
 
 
-
-#### 3.3 2018年7月到2020年3月
+#### 2.3 2018年7月到2020年3月
 - 大搜车【**P6资深Android开发**】
     - 负责大搜车旗下一鹿有车项目开发迭代【从0到1，百万级应用】
 - 一鹿有车Android开发经历
@@ -72,18 +57,30 @@
 - 在大搜车产出
     - 负责项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码开发。将多个app不断完善抽取分离组件化module，为后期app快速高效复用打下基础。
     - 通用视频播放器，用于4条业务线，开源star2k，解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
-    - 基于腾讯x5开源库，提高webView开发效率，大概要节约你百分之六十的时间成本，上搜车内部开源推荐库。设计过缓存方案，优化WebView加载资源，省流。
     - 网络拦截小助手，内部开源，网络流程分析，记录每个网络请求->响应数据，方便查看很全面的请求头信息，响应头信息，以及body实体，以及网络连接，dns解析，TLS连接，请求响应等时间差……
 
 
 
-#### 3.4 2015年9月到2018年7月
+#### 2.4 2015年9月到2018年7月
 - 工作阶段
     - 第一阶段：投资界NWD部门(15年9月-17年11月)，对于投资界App(新闻类)，负责代码架构优化，迭代；对于新芽App(资讯工具类)，负责新芽客户端独立开发工作。
     - 第二阶段：清科创业IMC部分(17年11月-18年7月)，负责开发沙丘大学App(知识付费视频播放类)。
 - 北京清科集团Android开发经历
     - 1.根据产品的需求，对应用进行开发和后期的迭代维护，并且逐渐制定了代码注释命名规范文档。
     - 2.将接手过来的代码，逐步重构，慢慢由MVC架构模式转变成MVP架构模式，对项目模块结构进行划分和抽象，较大程度解决之前代码臃肿和维护难问题。
+
+
+### 3.专业技能
+- 基础技能
+    - 具有扎实的Java语言基础，掌握基础数据结构，熟悉面向对象编程思想，熟练运用设计模式原则，热爱技术，长期维护开源项目。
+    - 熟悉Http协议，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，弱网模拟等工具。
+    - 熟悉Android四大组件，Handler通信机制，View绘制，事件机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
+- 中高级技术点
+    - 熟悉Glide，OkHttp，LeakCanary，Jetpack等核心设计思想。熟悉App应用程序崩溃流程和原理，熟悉常见的性能优化和设计模式。
+- 高级技术点
+    - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
+    - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
+    - 懂得一些App稳定性治理，通过崩溃监控，核心链路埋点，降级处理，异常设计，代码串讲，技术复盘等手段，达到app稳定性指标。
 
 
 
