--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -14,7 +14,6 @@
 - GitHub：https://github.com/yangchong211
 - 目前工作情况：在职状态(作业帮智能硬件-中台Android组)
 - 技术项目和博客：GitHub项目20k以上star，follower2k以上，发表博客150多篇。
-- 学校：武汉软件工程职业学院
 
 
 
@@ -76,7 +75,7 @@
     - 熟悉Http协议，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，弱网模拟等工具。
     - 熟悉Android四大组件，Handler通信机制，View绘制，事件机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
 - 中高级技术点
-    - 熟悉Glide，OkHttp，LeakCanary，Jetpack等核心设计思想。熟悉App应用程序崩溃流程和原理，熟悉常见的性能优化和设计模式。
+    - 熟悉Glide，OkHttp，LeakCanary，JetPack等核心设计思想。熟悉App应用程序崩溃流程和原理，熟悉常见的性能优化和设计模式。
 - 高级技术点
     - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
     - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
