--- a/Read/ReadMeWiki/01.大型方案/28.音视频通话方案设计.md
+++ b/Read/ReadMeWiki/01.大型方案/28.音视频通话方案设计.md
@@ -9,9 +9,13 @@
     - 2.2 三端交互设计图
     - 2.3 声网视频开发流程
     - 2.4 多设备聊天流程图
+    - 2.5 TCP消息的设计
 - 03.移动端方案实践
     - 3.1 总架构设计层次图
     - 3.2 接口通信设计图
+    - 3.3 TCP和PUSH场景
+    - 3.4 App来电场景设计
+    - 3.5 App去电场景设计
 
 
 
@@ -75,6 +79,10 @@
 
 
 
+#### 2.5 TCP消息的设计
+
+
+
 ### 03.移动端方案实践
 #### 3.1 总架构设计层次图
 - ![image](https://img-blog.csdnimg.cn/46625bc4891f4bc294108df245f76954.png)
@@ -86,6 +94,22 @@
 - 为啥要基于接口开发？直接创建model，然后给方法设置成public也可以达到同样功能，那样不行吗？
 - 首先回顾一下MVP架构模式，针对Model层和View层，是不是要设计一套接口层Contract【定义view和presenter的接口】，这样可以让结构更加清晰明了。通过接口，大概就知道核心做了什么事情。
 
+
+#### 3.3 TCP和PUSH场景
+- 思考两者场景。思考一个问题？什么场景下使用tcp，什么场景下使用push，两者有何区别？
+- App进程杀死：走百度惠推push通道，走的是手机厂商内部逻辑，目前是vivo，oppo，xiaomi，huawei四个大的厂商通道。当收到push后，弹出系统呼叫通知栏。硬伤：抵达消息率比较低
+- App进程存活：走tcp消息，相当于使用tcp来发送和接收消息。然后再处理音视频聊天过程中的业务逻辑。
+
+
+#### 3.4 App来电场景设计
+- App来电场景：智能设备给App拨打音视频通话。
+- ![image](https://img-blog.csdnimg.cn/3c2e3e8014cd4901a9d18d6cd15ee338.png)
+
+
+
+#### 3.5 App去电场景设计
+- App去电场景：App给智能设备拨打音视频通话。
+- ![image](https://img-blog.csdnimg.cn/37babcd023ff4d2ab1f02505da04cab3.png)
 
 
 
